--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,1 +1,12 @@
 // Start your SCSS code
+@import './components/main';
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.content {
+  margin-top: 16px;
+}
