Modal Creation and styling

--- a/src/scss/components/main.scss
+++ b/src/scss/components/main.scss
@@ -1,3 +1,6 @@
 @import './burger';
 @import './burgerIngridients';
-@import './buildControls.scss'
+@import './buildControls.scss';
+
+
+@import './UI/main.scss';
