Continue with Burguer interface

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,5 @@
 // Start your SCSS code
-@import './components/main';
+@import './components/all';
 
 body {
   margin: 0;
@@ -8,5 +8,5 @@ body {
 }
 
 .content {
-  margin-top: 16px;
+  margin-top: 72px;
 }
