--- a/src/scss/components/UI/modal.scss
+++ b/src/scss/components/UI/modal.scss
@@ -3,6 +3,7 @@
   z-index: 500;
   background-color: white;
   width: 70%;
+  min-height: 350px;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 1px black;
   padding: 16px;
